# flask-assignment

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  main.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: create_release_branch.yml  deploy_ci.yml  test.yml
app/: __init__.py  config.py  error.py  errors.py  models.py  serailziers.py  views.py
app/models/: board.py  comment.py  post.py  user.py
app/serailziers/: board.py  comment.py  post.py  user.py
app/views/: __init__.py  auth.py  board.py  comment.py  post.py  search.py  user.py
deploy/: test.yml
tests/: conftest.py  pytest.ini  test_user.py
tests/factories/: post.py  user.py
tests/views/: conftest.py  test_post.py  test_user.py
