[tool.poetry]
name = "assignment"
version = "0.1.0"
description = ""
authors = ["Jisoo Choi <cjisoo0117@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-jwt-extended = "^3.24.1"
marshmallow = "^3.7.1"
flask-classful = "^0.14.2"
mongoengine = "^0.20.0"
flask_mongoengine = "^0.9.5"
pytest = "^5.4.3"
pytest-flask = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-flask = "^1.0.0"
pytest-env = "^0.6.2"
pytest-factoryboy = "^2.0.3"
mongomock = "^3.19.0"
pytest-rerunfailures = "^9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
